for running on heroku

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "smart-cancer-navigator",
+  "name": "smart-covid-navigator",
   "version": "0.0.0",
   "license": "Apache-2",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --port 4200 --proxy-config proxy.conf.json --ssl",
-    "build": "ng build",
+    "start": "node server.js",
+    "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
