--- a/reference/package.json
+++ b/reference/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "smart-cancer-navigator",
+  "name": "smart-covid-navigator",
   "version": "0.0.0",
   "license": "Apache-2",
   "scripts": {
